objects/vlocity_ins__AssessmentAnswer__c.object
<CustomObject>
    <description>Represents the answer to a given question on an Assessment. When defined for an assessment template, this represents a available answer to the parent question.</description>
    <fields>
        <fullName>vlocity_ins__Answer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Answer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssessmentQuestionId__c</fullName>
        <label>Assessment Question</label>
        <referenceTo>vlocity_ins__AssessmentQuestion__c</referenceTo>
        <relationshipLabel>Assessment Answers</relationshipLabel>
        <relationshipName>AssessmentAnswers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsTemplateAnswer__c</fullName>
        <formula>vlocity_ins__AssessmentQuestionId__r.vlocity_ins__AssessmentId__r.vlocity_ins__IsTemplate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Template Answer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__QuestionType__c</fullName>
        <formula>TEXT(vlocity_ins__AssessmentQuestionId__r.vlocity_ins__QuestionType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Score__c</fullName>
        <inlineHelpText>The score assigned to this specific response if selected during the Assessment.</inlineHelpText>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <label>Assessment Answer</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Order</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessment Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>